--- a/BlackJack/BlackJack.csproj
+++ b/BlackJack/BlackJack.csproj
@@ -85,6 +85,7 @@
     <Compile Include="model\rules\SoftHitStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="view\GameEvent.cs" />
     <Compile Include="view\IView.cs" />
     <Compile Include="view\SimpleView.cs" />
     <Compile Include="view\SwedishView.cs" />
